--- a/ios/Podfile
+++ b/ios/Podfile
@@ -81,6 +81,8 @@ target 'MernMobile' do
 
   pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'MernMobileTests' do
     inherit! :complete
     # Pods for testing
