--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MernMobile",
+  "name": "goEats",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,16 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.9",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
+    "@unform/core": "^2.1.0",
+    "@unform/mobile": "^2.1.0",
+    "axios": "^0.19.2",
+    "components": "^0.1.0",
+    "lottie-react-native": "^3.4.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-camera": "^3.26.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-permissions": "^2.1.5",
     "react-native-qrcode-scanner": "^1.4.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.5.0"
+    "react-native-screens": "^2.5.0",
+    "react-native-vector-icons": "^6.6.0",
+    "styled-components": "^5.1.0",
+    "yup": "^0.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
