--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@unform/mobile": "^2.1.0",
     "axios": "^0.19.2",
     "components": "^0.1.0",
+    "date-fns": "^2.13.0",
+    "intl": "^1.2.5",
     "lottie-react-native": "^3.4.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
